--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Averia+Sans+Libre&display=swap");
 body {
   margin: 0;
-  font-family: "Averia Sans Libre";
+  font-family: "Averia Sans Libre" !important;
 }
 
 code {
